--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.expensemanager'
+    namespace 'com.example.moneytracker'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.expensemanager"
+        applicationId "com.example.moneytracker"
         minSdk 24
         targetSdk 34
         versionCode 1
