--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0"
 
     // MPAndroidChart dependency for charting support
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
